# FigmaVaporServer

./: .gitignore  Package.resolved  Package.swift  README.md  device-mode.md  package.json
.github/workflows/: release.yml
FigmaPluginUI/Sources/FigmaPluginUI/Macro/: Container.swift  Control.swift  Layout.swift  Media.swift  Table.swift
FigmaPluginUI/Sources/FigmaPluginUI/Pages/: CanvasPage.swift  LabPage.swift
FigmaPluginUI/Sources/PluginUIMacros/: CSSValues.swift
FigmaPluginUI/Sources/PluginUIMacros/Container/: SectionMacro.swift
FigmaPluginUI/Sources/PluginUIMacros/Control/: TextEditorMacro.swift
Public/: openapi.yaml
Public/wasm/pages/: lab.js
Sources/FigmaApp/: BonjourAnnouncer.swift  configure.swift
Sources/FigmaRoutes/: AppContext.swift  KivyLocalSender.swift  PluginClients.swift  Shared.swift  openapi.json  routes.swift
Sources/FigmaRoutes/Routes/: CanvasPreviewRoutes.swift  CanvasRoutes.swift  DevicePreviewRoutes.swift  FontRoutes.swift  ImageRoutes.swift  KvRoutes.swift  LabRoutes.swift  SetupRoutes.swift  SvgRoutes.swift  WebSocketRoutes.swift  WidgetRoutes.swift
Sources/FigmaVaporServer/: entrypoint.swift
SwiftUI-api/: SwiftUI.swift  SwiftUICore.swift
VaporKivyReloader/Sources/VaporKivyReloader/: CanvasReloader.swift  VaporKivyReloader.swift
figma-canvas-preview/: README.md  kivy-reloader.toml  pyproject.toml
figma-canvas-preview/src/figma_canvas_preview/: app.py
figma-kv-preview/: kivy-reloader.toml  pyproject.toml
figma-kv-preview/src/figma_kv_preview/: app.py  preview.kv
(+10 files in other folders)
